rust_module/bin_output.txt
    Checking rust_module v0.1.0 (C:\Users\ENG AHMAD\Documents\Project_momo\M2TW_seamlessCoop\rust_module)
warning: unused import: `PathBuf`
 --> src\dropbox_service.rs:6:23
  |
6 | use std::path::{Path, PathBuf};
  |                       ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `winapi::shared::winerror::ERROR_BROKEN_PIPE`
  --> src\main.rs:15:5
   |
15 | use winapi::shared::winerror::ERROR_BROKEN_PIPE;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `CreateFileW` and `OPEN_EXISTING`
  --> src\main.rs:17:27
   |
17 | use winapi::um::fileapi::{CreateFileW, OPEN_EXISTING, ReadFile, WriteFile}; // Added CreateFileW/OPEN_EXISTING if needed for testing
   |                           ^^^^^^^^^^^  ^^^^^^^^^^^^^

warning: unused imports: `FILE_SHARE_READ`, `FILE_SHARE_WRITE`, `GENERIC_READ`, and `GENERIC_WRITE`
  --> src\main.rs:23:25
   |
23 | use winapi::um::winnt::{FILE_SHARE_READ, FILE_SHARE_WRITE, GENERIC_READ, GENERIC_WRITE};
   |                         ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^  ^^^^^^^^^^^^^

error[E0432]: unresolved import `rust_dropbox::WriteMode`
 --> src\bin\test_struct.rs:1:34
  |
1 | use rust_dropbox::{UploadOption, WriteMode};
  |                                  ^^^^^^^^^ no `WriteMode` in the root

error[E0599]: no associated item named `Overwrite` found for struct `UploadOption` in the current scope
  --> src\dropbox_service.rs:58:60
   |
58 |             .upload(contents, &dropbox_dest, UploadOption::Overwrite)
   |                                                            ^^^^^^^^^ associated item not found in `UploadOption`

error[E0599]: no function or associated item named `new` found for struct `UploadOption` in the current scope
 --> src\bin\test_struct.rs:5:27
  |
5 |     let _ = UploadOption::new(WriteMode::Overwrite);
  |                           ^^^ function or associated item not found in `UploadOption`

Some errors have detailed explanations: E0432, E0599.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `rust_module` (bin "test_struct") due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
For more information about this error, try `rustc --explain E0599`.
warning: `rust_module` (bin "rust_module") generated 4 warnings
error: could not compile `rust_module` (bin "rust_module") due to 1 previous error; 4 warnings emitted
